fix: make mario jump higher

--- a/mario-game/style.css
+++ b/mario-game/style.css
@@ -99,13 +99,13 @@ body{
         bottom: 0;
     }
     45%{
-        bottom: 150px;
+        bottom: 180px;
     }
     50%{
-        bottom: 150px;
+        bottom: 180px;
     }
     55%{
-        bottom: 150px;
+        bottom: 180px;
     }
     100%{
         bottom: 0;
